fix(table): preserve whitespace in cells with multiple spaces

--- a/packages/react/src/components/Table/TableCellRenderer/_table-cell-renderer.scss
+++ b/packages/react/src/components/Table/TableCellRenderer/_table-cell-renderer.scss
@@ -28,3 +28,7 @@
 .#{$iot-prefix}--table__cell-text--no-wrap {
   white-space: nowrap;
 }
+
+.#{$iot-prefix}--table__cell-text--pre-wrap {
+  white-space: pre;
+}
